noinst_LIBRARIES = libsimulation.a

libsimulation_a_SOURCES = aiplayercar.cpp bound.cpp car.cpp carengine.cpp carinput.cpp carrulestatus.cpp carwheel.cpp chatmessage.cpp clientnet.cpp clientplayercontrol.cpp clientsim.cpp collisiondata.cpp collisiondetector.cpp collisionface.cpp collisionmodel.cpp gamecore.cpp material.cpp message.cpp messagebuffer.cpp movingobject.cpp movobjinput.cpp objectchoice.cpp physics.cpp player.cpp playercontrol.cpp rulecontrol.cpp simulation.cpp stuntsnet.cpp textmessage.cpp tilemodel.cpp track.cpp udpnet.cpp world.cpp
INCLUDES = $(all_includes) -I../intl -I../shared

EXTRA_DIST = aiplayercar.cpp aiplayercar.h body.h bound.cpp bound.h car.cpp car.h carengine.cpp carenine.h carinput.cpp carinput.h carrulestatus.cpp carrulestatus.h carwheel.cpp carwheel.h chatmessage.cpp chatmessage.h clientnet.cpp clientnet.h clientplayercontrol.cpp clientplayercontrol.h clientsim.cpp clientsim.h collisiondata.cpp collisiondata.h collisiondetector.cpp collisiondetector.h collisionface.cpp collisionface.h collisionmodel.cpp collisionmodel.h dynamicobject.cpp gamecore.cpp gamecore.h material.cpp material.h message.cpp message.h messagebuffer.cpp messagebuffer.h movingobject.cpp movingobject.h movobjinput.cpp movobjinput.h objectchoice.cpp objectchoice.h physics.cpp physics.h player.cpp player.h playercontrol.cpp playercontrol.h rulecontrol.cpp rulecontrol.h simulation.cpp simulation.h stuntsnet.cpp stuntsnet.h textmessage.cpp textmessage.h tilemodel.cpp tilemodel.h track.cpp track.h udpnet.cpp udpnet.h world.cpp world.h

